WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157147
[Mac] AirPlay fails if target is set before AVPlayer has been created
https://bugs.webkit.org/show_bug.cgi?id=157147
Summary
[Mac] AirPlay fails if target is set before AVPlayer has been created
Eric Carlson
Reported
2016-04-28 11:49:02 PDT
AirPlay never starts if the playback target is set before the AVPlayer has been created.
Attachments
Patch for the bots.
(17.83 KB, patch)
2016-04-28 12:17 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch
(17.83 KB, patch)
2016-04-28 13:07 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Proposed patch.
(1.68 KB, patch)
2016-05-02 18:00 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-04-28 11:49:59 PDT
<
rdar://problem/24197592
>
Eric Carlson
Comment 2
2016-04-28 12:17:39 PDT
Created
attachment 277639
[details]
Patch for the bots.
WebKit Commit Bot
Comment 3
2016-04-28 12:18:50 PDT
Attachment 277639
[details]
did not pass style-queue: WARNING: Not running on native Windows. ERROR: Source/WebCore/platform/mock/mediasource/MockMediaPlayerMediaSource.cpp:48: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/mock/mediasource/MockMediaPlayerMediaSource.cpp:48: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2016-04-28 13:07:09 PDT
Created
attachment 277642
[details]
Updated patch
WebKit Commit Bot
Comment 5
2016-04-29 14:28:30 PDT
Comment on
attachment 277642
[details]
Updated patch Clearing flags on attachment: 277642 Committed
r200264
: <
http://trac.webkit.org/changeset/200264
>
WebKit Commit Bot
Comment 6
2016-04-29 14:28:34 PDT
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 7
2016-04-29 15:40:37 PDT
Plus
https://trac.webkit.org/r200266
to make the test less flaky.
Ryan Haddad
Comment 8
2016-04-29 17:09:04 PDT
LayoutTest media/media-source/media-source-stalled-holds-sleep-assertion.html has been timing out on Mac since
r200264
landed. <
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fmedia-source%2Fmedia-source-stalled-holds-sleep-assertion.html
>
WebKit Commit Bot
Comment 9
2016-05-01 17:26:33 PDT
Re-opened since this is blocked by
bug 157251
Eric Carlson
Comment 10
2016-05-02 18:00:25 PDT
Created
attachment 277953
[details]
Proposed patch.
Dean Jackson
Comment 11
2016-05-02 18:03:12 PDT
Comment on
attachment 277953
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=277953&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:1040 > + // Clear m_shouldPlayToPlaybackTarget so doesn't return without doing anything.
Typo: missing "it"
WebKit Commit Bot
Comment 12
2016-05-02 18:39:16 PDT
Comment on
attachment 277953
[details]
Proposed patch. Clearing flags on attachment: 277953 Committed
r200354
: <
http://trac.webkit.org/changeset/200354
>
WebKit Commit Bot
Comment 13
2016-05-02 18:39:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug