Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm
@@ -35,6 +35,7 @@
 #import "MediaSourcePrivateAVFObjC.h"
 #import "MediaSourcePrivateClient.h"
 #import "MediaTimeAVFoundation.h"
+#import "MockMediaPlayerMediaSource.h"
 #import "PlatformClockCM.h"
 #import "WebCoreSystemInterface.h"
 #import <AVFoundation/AVAsset.h>
@@ -210,6 +211,9 @@ void MediaPlayerPrivateMediaSourceAVFObjC::registerMediaEngine(MediaEngineRegist
 
 bool MediaPlayerPrivateMediaSourceAVFObjC::isAvailable()
 {
+    if (MockMediaPlayerMediaSource::isRegistered())
+        return false;
+
     return AVFoundationLibrary()
         && isCoreMediaFrameworkAvailable()
         && getAVStreamDataParserClass()
@@ -241,6 +245,9 @@ void MediaPlayerPrivateMediaSourceAVFObjC::getSupportedTypes(HashSet<String, ASC
 
 MediaPlayer::SupportsType MediaPlayerPrivateMediaSourceAVFObjC::supportsType(const MediaEngineSupportParameters& parameters)
 {
+    if (!isAvailable())
+        return MediaPlayer::IsNotSupported;
+
     // This engine does not support non-media-source sources.
     if (!parameters.isMediaSource)
         return MediaPlayer::IsNotSupported;
@@ -274,6 +281,11 @@ void MediaPlayerPrivateMediaSourceAVFObjC::load(const String&)
 void MediaPlayerPrivateMediaSourceAVFObjC::load(const String& url, MediaSourcePrivateClient* client)
 {
     UNUSED_PARAM(url);
+
+    if (!isAvailable()) {
+        setNetworkState(MediaPlayer::FormatError);
+        return;
+    }
 
     m_mediaSourcePrivate = MediaSourcePrivateAVFObjC::create(this, client);
 }
@@ -858,10 +870,7 @@ void MediaPlayerPrivateMediaSourceAVFObjC::setShouldPlayToPlaybackTarget(bool sh
 
 bool MediaPlayerPrivateMediaSourceAVFObjC::isCurrentPlaybackTargetWireless() const
 {
-    if (!m_playbackTarget)
-        return false;
-
-    return m_shouldPlayToTarget && m_playbackTarget->hasActiveRoute();
+    return m_playbackTarget && m_shouldPlayToTarget && m_playbackTarget->hasActiveRoute();
 }
 #endif
 
