Source/WebCore/testing/Internals.cpp
@@ -2741,9 +2741,6 @@ bool Internals::isPluginSnapshotted(Element& element)
 
 void Internals::initializeMockMediaSource()
 {
-#if USE(AVFOUNDATION)
-    WebCore::Settings::setAVFoundationEnabled(false);
-#endif
     MediaPlayerFactorySupport::callRegisterMediaEngine(MockMediaPlayerMediaSource::registerMediaEngine);
 }
 
